--- a/tests/index.html
+++ b/tests/index.html
@@ -29,11 +29,10 @@
         zoom: 50%;
       }
     </style>
-
-    {{content-for 'head-footer'}}
-    {{content-for 'test-head-footer'}}
   </head>
   <body>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
 
     {{content-for 'body'}}
     {{content-for 'test-body'}}
@@ -42,8 +41,5 @@
     <script src="assets/ember-cli-test-project.js"></script>
     <script src="testem.js"></script>
     <script src="assets/test-loader.js"></script>
-
-    {{content-for 'body-footer'}}
-    {{content-for 'test-body-footer'}}
   </body>
 </html>
